fixed timer bug and aligned buttons at bottom

--- a/src/app/chef/chef.component.css
+++ b/src/app/chef/chef.component.css
@@ -35,7 +35,7 @@ main {
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   font-family: "Montserrat", sans-serif;
   font-size: 0.8em;
   line-height: 1.5em;
@@ -53,7 +53,8 @@ button {
   background-color: #bbe4dd;
   width: 60%;
   height: 2em;
-  margin-top: 20px;
+  margin-top: auto;
+  margin-bottom: 1em;
   align-self: center;
   border-radius: 10%;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
